--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -35,7 +35,7 @@
   .dark {
     --background: #161730;
     --text: #ebe9fc;
-    --foreground: #ebe9fc;
+    --foreground: #fff;
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
